warm-flow-doc/src/v1.3.5/introduction/projectexample.md
# 开源集成案例

| 作者       | 项目名称                                                                                                             | 描述                                                                                                   |
|----------|------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------|
| 晓华       | [hh-vue](https://gitee.com/min290/hh-vue) / [演示](http://www.hhzai.top/)                                          | 基于ruoyi-vue集成，springboot2+vue2                                                                       |
| seven       | [seaflow](https://gitee.com/qq75547276/seaflow) / [演示](http://124.222.180.108:8999/)                             | seaflow 是一款 开源仿钉钉工作流 平台， 前端使用 vue3+element plus ， 实现 流程设计和审批功能， 后端基于国产工作流Dromara warm-flow 实现流程控制， 大大缩短了学习成本 |
| 晓华/Zhen  | [ruoyi-vue3](https://gitee.com/min290/RuoYi-Vue3.git )                                                           | 基于ruoyi-vue3集成前端                                                                                     |
| 梁小梁/Zhen | [Ruoyi-Cloud](https://gitee.com/liangliyun/RuoYi-Cloud)/[RuoYi-Vue3](https://gitee.com/liangliyun/RuoYi-Vue3-UI) | 基于Ruoyi-Cloud集成的跑批系统,spring-cloud(nacos)+vue3                                                        |
| quick    | [quick-boot](https://github.com/csx-bill/quick-boot) / [演示](http://118.89.55.165)                                | 基于 Spring Cloud 2022 、Spring Boot 3、React、AMIS 和 APIJSON 的低代码系统的设计和实现。该系统可以帮助企业快速开发和部署高质量的 Web 应用程序  |

